--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.6.2
 click==8.1.7
 colorama==0.4.6
-Flask
+Flask==2.3.3
 Flask-Mail==0.9.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -9,5 +9,4 @@ MarkupSafe==2.1.3
 python-http-client==3.3.7
 sendgrid==6.10.0
 starkbank-ecdsa==2.2.0
-Werkzeug
-gunicorn
+Werkzeug==2.3.7
