--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
 Flask
 Flask-Mail==0.9.1
+gunicorn==21.2.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.1
+Pillow==10.0.1
 python-http-client==3.3.7
+requests==2.31.0
 sendgrid==6.10.0
 starkbank-ecdsa==2.2.0
+urllib3==2.0.5
 Werkzeug
