--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 packaging==23.1
-Pillow==10.0.1
+Pillow
 python-http-client==3.3.7
 requests==2.31.0
 sendgrid==6.10.0
